Config supports counts, ignores level 0